Create test case for using globs options.apis.
